Some UI-Fixes: - increase contrast in widget - prevent widget to slideToggle when clicking link - fix incorrect manage-links when browsing sources

--- a/public/js-example/accessibility.cloud.css
+++ b/public/js-example/accessibility.cloud.css
@@ -7,7 +7,7 @@ body.ac-example {
   margin: 0;
   padding: 0;
   font-weight: 300;
-  color:#888;
+  color:#666;
   line-height: 1.3;
 }
 
